@@ -32,18 +32,16 @@ class TestEthiopia(unittest.TestCase):
         self.assertIn(date(2019, 5, 1), self.holidays)
         self.assertIn(date(2019, 5, 5), self.holidays)
         self.assertIn(date(2019, 5, 28), self.holidays)
-        self.assertIn(date(2019, 9, 12), self.holidays)
-        self.assertIn(date(2019, 9, 28), self.holidays)
+        self.assertIn(date(2019, 9, 11), self.holidays)
+        self.assertIn(date(2019, 9, 27), self.holidays)
         self.assertIn(date(2019, 11, 10), self.holidays)
+
+    def test_2020(self):
+        self.assertIn(date(2020, 9, 12), self.holidays)
+        self.assertIn(date(2020, 9, 28), self.holidays)
 
     def test_ethiopian_christmas(self):
         self.assertIn(date(2019, 1, 7), self.holidays)
-
-    def test_ethiopian_newyear(self):
-        self.assertIn(date(2019, 9, 12), self.holidays)
-
-    def test_ethiopian_meskel(self):
-        self.assertIn(date(2019, 9, 28), self.holidays)
 
     def test_ethiopian_ephiphany(self):
         self.assertIn(date(2019, 1, 19), self.holidays)
@@ -61,10 +59,15 @@ class TestEthiopia(unittest.TestCase):
         self.assertIn(date(2019, 5, 1), self.holidays)
 
     def test_patriots_day(self):
+        self.assertNotIn(date(1940, 5, 5), self.holidays)
         self.assertIn(date(2019, 5, 5), self.holidays)
 
     def test_downfall_of_dergue(self):
         self.assertIn(date(2019, 5, 28), self.holidays)
+
+    def test_formation_of_dergue(self):
+        self.assertIn(date(1983, 9, 12), self.holidays)
+        self.assertIn(date(1984, 9, 13), self.holidays)
 
     def test_hijri_based(self):
         if sys.version_info >= (3, 6):
